--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/app_icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VidDocs User-Study Updation Demo</title>
+    <title>SwapVid UI demo</title>
   </head>
   <!--
     trick:
