--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="description" content="My Awesome App description" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
+    <link
+      rel="apple-touch-icon"
+      href="/apple-touch-icon-180x180.png"
+      sizes="180x180"
+    />
+    <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
     <title>SwapVid Demo</title>
   </head>
